# LSTM-Stock-Predictor

./: .gitignore  3.py  LICENSE  README.md  README_EN.md  RLagent.py  analyze_transactions.py  app.py  best_model.pth  get__data.ipynb  get_data.ipynb  get_stock_data.py  gradio_interface.py  lstm.py  lstm_pytorch.ipynb  prediction_metrics.csv  prediction_summary.txt  process_stock_data.py  pyproject.toml  requirements.txt  stock_prediction_lstm.py  visualization.py
data/: AAPL.csv  ABBV.csv  AMZN.csv  BAC.csv  BKR.csv  BMY.csv  C.csv  CAT.csv  CMCSA.csv  COP.csv  CVX.csv  DE.csv  DIS.csv  GE.csv  GOOGL.csv  GS.csv  HON.csv  JNJ.csv  JPM.csv  MMM.csv  MRK.csv  MSFT.csv  NFLX.csv  NKE.csv  PFE.csv  SBUX.csv  SLB.csv  TSLA.csv  WFC.csv  XOM.csv
models/: AAPL_model.pth  ABBV_model.pth  AMZN_model.pth  BAC_model.pth  BKR_model.pth  BMY_model.pth  CAT_model.pth  CMCSA_model.pth  COP_model.pth  CVX_model.pth  C_model.pth  DE_model.pth  DIS_model.pth  GE_model.pth  GOOGL_model.pth  GS_model.pth  HON_model.pth  JNJ_model.pth  JPM_model.pth  MMM_model.pth  MRK_model.pth  MSFT_model.pth  NFLX_model.pth  NKE_model.pth  PFE_model.pth  SBUX_model.pth  SLB_model.pth  TSLA_model.pth  WFC_model.pth  XOM_model.pth
output/: AAPL_transactions.csv  ABBV_transactions.csv  BKR_transactions.csv  BMY_transactions.csv  CAT_transactions.csv  CMCSA_transactions.csv  COP_transactions.csv  C_transactions.csv  GE_transactions.csv  GS_transactions.csv  JNJ_transactions.csv  MMM_transactions.csv  MRK_transactions.csv  MSFT_transactions.csv  NFLX_transactions.csv  PFE_transactions.csv  (+3 more)
tmp/: lstm.py  (+7 more)
(+71 files in other folders)
