[tool.poetry]
name = "stock-trading"
version = "0.1.0"
description = ""
authors = ["MilleXi <xyy318@126.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
torch = {version = "^2.5.0", source = "torch"}
pandas = "^2.2.3"
xgboost = "^2.1.2"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
yfinance = "^0.2.49"
numpy = "^2.1.3"
tqdm = "^4.67.0"
seaborn = "^0.13.2"
gradio = "^5.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu124"
priority = "supplemental"